# Conway

./: README.md
cpp/linux/: CMakeLists.txt  TODO.txt  build.sh  conway_main.cpp
cpp/linux/exe/: CMakeLists.txt  conway_main.cpp
cpp/linux/lib/: CMakeLists.txt  Game.cpp  Game.h  Grid.cpp  Grid.h
cpp/linux/src/: CMakeLists.txt  Game.h  Grid.cpp
